--- a/app/src/main/res/layout/fragment_infobusqueda.xml
+++ b/app/src/main/res/layout/fragment_infobusqueda.xml
@@ -8,6 +8,6 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/inv"/>
+        android:id="@+id/compra"/>
 
 </FrameLayout>
