--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -41,4 +41,11 @@
         android:layout_marginEnd="313dp"
         android:src="@drawable/escaner" />
 
+    <ListView
+        android:id="@+id/compraL"
+        android:layout_width="match_parent"
+        android:layout_height="594dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp" />
 </RelativeLayout>
